<resources>
    <string name="app_name">register</string>
    <string name="gaming">Gaming</string>
    <string name="by_creating_an_account_or_signing_you_agree_to_our">By creating an account or signing you agree to our</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="sign_in_with_apple">sign in with apple</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="sign_in_with_phone">sign in with phone</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="email2">Username or email</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="explore_together">Explore Together</string>
    <string name="create_an_account_to_run_wild_through_our_curated_experiences">Create an account to run wild through our curated experiences.</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="skip">Skip</string>
    <string name="minty">MINTY</string>
    <string name="sign_in">Sign in</string>
    <string name="other_sign_in_options">Other sign in options</string>
    <string name="do_not_have_an_account"><u>Do not have an account?</u></string>
    <string name="sign_up">Sign up</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="hello">Hello</string>
</resources>