<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/girl_image" />

    <TextView
        style="@style/ThemeOverlay.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_together"
            android:textColor="@color/black"


            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account_to_run_wild_through_our_curated_experiences"

            android:textAlignment="center"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/google"
            android:text="@string/continue_with_google"
            app:iconSize="30dp"
            android:layout_marginHorizontal="20dp"

            style="@style/button2"/>
        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/apple"
            android:text="@string/continue_with_apple"
            android:layout_marginHorizontal="20dp"

            style="@style/button2"/>
        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/email"
            android:text="@string/continue_with_email"
            android:layout_marginHorizontal="20dp"

            style="@style/button2"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:textSize="18sp"
                android:text="@string/already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:textSize="22sp"
                android:text="@string/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>