<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1E"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minty"
            android:textColor="#63E6E2"
            android:textSize="40sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="#99EBEBF5"
            app:hintTextColor="#99EBEBF5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#99EBEBF5"
                android:textColorHint="#99EBEBF5" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="#99EBEBF5"
            app:hintTextColor="#99EBEBF5"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#99EBEBF5"
                android:textColorHint="#99EBEBF5" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_your_password"
            android:textAlignment="center"
            android:textColor="#99EBEBF5"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#63E6E2"
            android:paddingVertical="12dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:textAlignment="center"
        android:textColor="#99EBEBF5"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_sign_in_options"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/google"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:padding="4dp"
            android:src="@drawable/facebook_image"
            android:layout_width="50dp"
            android:layout_margin="10dp"
            android:layout_height="50dp"/>
         <com.google.android.material.imageview.ShapeableImageView
             android:src="@drawable/apple"
             android:layout_width="50dp"
             android:layout_margin="10dp"
             android:layout_height="50dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>